Add external-secrets-config addon with ClusterSecretStore and ArgoCD GitHub PAT ExternalSecret

--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -108,6 +108,10 @@ externalDns:
 externalSecrets:
   enable: false
 
+# External Secrets Configuration (ClusterSecretStore + ExternalSecrets)
+externalSecretsConfig:
+  enable: false
+
 # Gatekeeper Values
 gatekeeper:
   enable: false
