Fix ClusterSecretStore service account name to match external-secrets-sa

--- a/add-ons/external-secrets-config/clustersecretstore.yaml
+++ b/add-ons/external-secrets-config/clustersecretstore.yaml
@@ -10,6 +10,6 @@ spec:
       auth:
         jwt:
           serviceAccountRef:
-            name: external-secrets
+            name: external-secrets-sa
             namespace: external-secrets
 
