--- a/add-ons/external-secrets-config/github-pat-externalsecret.yaml
+++ b/add-ons/external-secrets-config/github-pat-externalsecret.yaml
@@ -3,25 +3,32 @@ kind: ExternalSecret
 metadata:
   name: github-credentials
   namespace: argocd
+  annotations:
 spec:
   refreshInterval: 1h
   secretStoreRef:
-    name: aws-secretsmanager
     kind: ClusterSecretStore
-  target:
-    name: github-credentials
-    creationPolicy: Owner
-    template:
-      metadata:
-        labels:
-          argocd.argoproj.io/secret-type: repository
-      data:
-        type: git
-        url: https://github.com/apono-io
-        password: "{{ .token }}"
-        username: git
+    name: aws-secretsmanager
   data:
     - secretKey: token
       remoteRef:
         key: segment-deployment-github-pat
+        property: pat        # <-- extract only the "pat" field from the JSON
+        conversionStrategy: Default
+        decodingStrategy: None
+  target:
+    name: github-credentials
+    creationPolicy: Owner
+    deletionPolicy: Retain
+    template:
+      engineVersion: v2
+      mergePolicy: Replace
+      metadata:
+        labels:
+          argocd.argoproj.io/secret-type: repository
+      data:
+        password: '{{ .token }}'
+        type: git
+        url: https://github.com/apono-io/segment-deployment.git
+        username: git
 
