--- a/argocd/charts/addons/argo-cd/values.yaml
+++ b/argocd/charts/addons/argo-cd/values.yaml
@@ -55,7 +55,7 @@ server:
     annotations:
       service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
       service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
-      # external-dns.alpha.kubernetes.io/hostname: argocd.DOMAIN  # Override in environment-specific values
+      # external-dns.alpha.kubernetes.io/hostname is injected via ApplicationSet values
 
 configs:
   repositories:
