--- a/argocd/bootstrap/control-plane/addons/oss/addons-argo-cd-appset.yaml
+++ b/argocd/bootstrap/control-plane/addons/oss/addons-argo-cd-appset.yaml
@@ -4,6 +4,7 @@ kind: ApplicationSet
 metadata:
   name: addons-argocd
 spec:
+  goTemplate: true
   syncPolicy:
     preserveResourcesOnDeletion: true
   generators:
