--- a/add-ons/external-secrets-config/templates/clustersecretstore.yaml
+++ b/add-ons/external-secrets-config/templates/clustersecretstore.yaml
@@ -6,7 +6,7 @@ spec:
   provider:
     aws:
       service: SecretsManager
-      region: us-east-1  # Update based on your region
+      region: {{ .Values.aws_region }}
       auth:
         jwt:
           serviceAccountRef:
