--- a/argocd/bootstrap/control-plane/addons/aws/addons-aws-oss-external-secrets-config-appset.yaml
+++ b/argocd/bootstrap/control-plane/addons/aws/addons-aws-oss-external-secrets-config-appset.yaml
@@ -25,6 +25,10 @@ spec:
         repoURL: '{{metadata.annotations.addons_repo_url}}'
         targetRevision: '{{metadata.annotations.addons_repo_revision}}'
         path: add-ons/external-secrets-config
+        helm:
+          releaseName: external-secrets-config
+          values: |
+            aws_region: {{metadata.annotations.aws_region}}
       destination:
         namespace: default
         name: '{{name}}'
