--- a/add-ons/external-secrets-config/templates/github-pat-externalsecret.yaml
+++ b/add-ons/external-secrets-config/templates/github-pat-externalsecret.yaml
@@ -27,7 +27,7 @@ spec:
         labels:
           argocd.argoproj.io/secret-type: repository
       data:
-        password: '{{ .token }}'
+        password: '{{ "{{" }} .token {{ "}}" }}'
         type: git
         url: https://github.com/apono-io/segment-deployment.git
         username: git
